# plymouth

./: .gitignore  .gitlab-ci.yml  Makefile.am  TODO  configure.ac  meson.build
po/: LINGUAS
scripts/: check-format.sh  default.cfg  generate-version.sh  plymouth-populate-initrd.in  plymouth-set-default-theme.in
src/: Makefile.am  main.c  meson.build  ply-boot-protocol.h  ply-boot-server.c  ply-boot-server.h  ply-boot-splash.c  ply-boot-splash.h  plymouthd-drm-escrow.c
src/client/: ply-boot-client.c  ply-boot-client.h  plymouth.c
src/libply/: meson.build  ply-array.c  ply-bitarray.c  ply-buffer.c  ply-buffer.h  ply-command-parser.c  ply-event-loop.c  ply-event-loop.h  ply-hashtable.c  ply-i18n.h  ply-key-file.c  ply-list.c  ply-list.h  ply-logger.c  ply-logger.h  ply-progress.c  ply-rectangle.c  ply-rectangle.h  ply-region.c  ply-terminal-session.c  ply-terminal-session.h  ply-trigger.c  ply-trigger.h  ply-utils.c  ply-utils.h
src/libply-splash-core/: meson.build  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-boot-splash.h  ply-device-manager.c  ply-device-manager.h  ply-input-device.c  ply-input-device.h  ply-keyboard.c  ply-keyboard.h  ply-kmsg-reader.c  ply-kmsg-reader.h  ply-pixel-buffer.c  ply-pixel-buffer.h  ply-pixel-display.c  ply-pixel-display.h  ply-renderer-plugin.h  ply-renderer.c  ply-renderer.h  ply-seat.c  ply-seat.h  ply-terminal-buffer.c  ply-terminal-buffer.h  ply-terminal-emulator.c  ply-terminal-emulator.h  ply-terminal.c  ply-terminal.h  ply-text-display.c  ply-text-display.h  ply-text-progress-bar.c  ply-text-step-bar.c
src/libply-splash-graphics/: meson.build  ply-animation.c  ply-capslock-icon.c  ply-console-viewer.c  ply-console-viewer.h  ply-entry.c  ply-image.c  ply-keymap-icon.c  ply-keymap-metadata.h  ply-label-plugin.h  ply-label.c  ply-label.h  ply-progress-animation.c  ply-progress-bar.c  ply-throbber.c
src/libplybootsplash/: ply-boot-splash-plugin.h  ply-entry.c  ply-entry.h  ply-label.c  ply-text-display.c  ply-window.c  ply-window.h
src/plugins/controls/: Makefile.am
src/plugins/controls/bitmap/: Makefile.am  plugin.c
src/plugins/controls/label/: plugin.c
src/plugins/controls/label-freetype/: Makefile.am  plugin.c
src/plugins/controls/label-pango/: Makefile.am  meson.build  plugin.c
src/plugins/renderers/drm/: Makefile.am  plugin.c
src/plugins/renderers/frame-buffer/: plugin.c
src/plugins/renderers/x11/: plugin.c
src/plugins/splash/: Makefile.am
src/plugins/splash/details/: plugin.c
src/plugins/splash/external-command/: Makefile.am  plugin.c
src/plugins/splash/fade-in/: plugin.c
src/plugins/splash/fade-throbber/: plugin.c
src/plugins/splash/pulser/: plugin.c
src/plugins/splash/script/: generate_script_string_header.py  meson.build  plugin.c  script-execute.c  script-lib-image.c  script-lib-math.c  script-lib-plymouth.c  script-lib-plymouth.h  script-lib-sprite.c  script-lib-sprite.h  script-lib-string.c  script-object.c  script-parse.c  script-scan.c  script.c
src/plugins/splash/solar/: plugin.c
src/plugins/splash/space-flares/: plugin.c
src/plugins/splash/spinfinity/: plugin.c
src/plugins/splash/text/: plugin.c
src/plugins/splash/tribar/: plugin.c
src/plugins/splash/two-step/: plugin.c
src/splash-plugins/text/: plugin.c
src/upstart-bridge/: ply-upstart-monitor.c  plymouth-upstart-bridge.c
systemd-units/: Makefile.am  plymouth-halt.service.in  plymouth-poweroff.service.in  plymouth-reboot.service.in  plymouth-switch-root-initramfs.service.in
themes/: Makefile.am
themes/twincam/: Makefile.am  twincam.plymouth.desktop
